fix: overflow Issue

--- a/story-engine-lab/src/index.css
+++ b/story-engine-lab/src/index.css
@@ -13,6 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
